# trajectory

./: .cspell.json  Cargo.toml  README.md
.github/.cspell/: project-dictionary.txt  rust-dependencies.txt
.github/workflows/: ci.yml  release.yml
examples/: plot.rs  rerun.rs
src/: cubic_spline.rs  lib.rs  linear.rs  traits.rs  utils.rs
