[package]
name = "trajectory"
version = "0.0.2"
authors = ["Takashi Ogura <t.ogura@gmail.com>"]
edition = "2018"
description = "Trajectory interpolation"
license = "Apache-2.0"
keywords = ["spline", "robotics", "interpolation"]
categories = ["algorithms"]
repository = "https://github.com/openrr/trajectory"
documentation = "http://docs.rs/trajectory"
readme = "README.md"

# Note: num-traits is public dependency.
[dependencies]
num-traits = "0.2"

[dev-dependencies]
gnuplot = "0.0"
