[package]
name = "trajectory"
version = "0.1.0"
authors = ["Takashi Ogura <t.ogura@gmail.com>"]
edition = "2021"
description = "Trajectory interpolation"
license = "Apache-2.0"
keywords = ["spline", "robotics", "interpolation"]
categories = ["algorithms"]
repository = "https://github.com/openrr/trajectory"

# Note: num-traits is public dependency.
[dependencies]
num-traits = "0.2"

[dev-dependencies]
assert_approx_eq = "1"
gnuplot = "0.0"

[lints]
workspace = true

[workspace.lints.rust]
missing_debug_implementations = "warn"
# missing_docs = "warn" # TODO
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
